lib/tests/fixtures/compiler/evaluation/multiply_bad_left_string.baseline
Error: multiply_bad_left_string.pp:1:8: node 'test': string 'foo' cannot be converted to Integer.
  notice('foo' * 1)
         ^~~~~
  backtrace:
    in '<class main>' at multiply_bad_left_string.pp:1
